--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
         <div class = "nav">
             <img src = "images/dan_pouk_logo.png " style = "hegiht : 15% ; width: 15%;"/>
             <h style = "font-size: 70px; font-weight: bold;">Dan Pouk</h>
-        </div>
+        </div class = "header">
+            <img src = "images/header.jpg" style = "width : 100% ; height : 20% ;"/>
         <div>
             
         </div>
