--- a/index.html
+++ b/index.html
@@ -9,9 +9,18 @@
             <img src = "images/dan_pouk_logo.png " style = "hegiht : 15% ; width: 15%;"/>
             <h style = "font-size: 70px; font-weight: bold;">Dan Pouk</h>
         </div class = "header">
-            <img src = "images/header.jpg" style = "width : 100% ; height : 25% ;"/>
-        <div>
-            
+        <img src = "images/header.jpg" style = "width : 100% ; height : 25% ;"/>
+        <div class = "header">
+            <div class = "first">
+                <img src = "Images/save_myanmar.jpg" style = "width : 100%; height : 100%; margin-top: 45%;"/>
+            </div>
+            <div class = "second">                  
+                <p style="text-align: center; font-size: 25px; font-weight: bold;">What Is Dan Pouk Website?</p>
+                <p style = "text-align: center; font-size: 20px;">
+                    ယခု website သည် မတရားစစ်အာဏာသိမ်းမှု့အတွင်း​နေ့စဉ်ဖြစ်ပျက်သမျှမတရားဖိနှိပ်မှု့ မှတ်တမ်းများကို ​နေ့ရက်အလိုက်
+                    အတပ်နိုင်ဆုံး စုစည်း​ပေးထား​ပေးမည့် website တစ်ခုဖြစ်ပါသည်။
+                </p>                
+            </div>
         </div>
     </body>
 </html>
