--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <div class = "second">                  
                 <p style="text-align: center; font-size: 25px; font-weight: bold;">What Is Dan Pouk Website?</p>
                 <p style = "text-align: center; font-size: 20px;">
-                    ယခု website သည် မတရားစစ်အာဏာသိမ်းမှု့အတွင်း​နေ့စဉ်ဖြစ်ပျက်သမျှမတရားဖိနှိပ်မှု့ မှတ်တမ်းများကို ​နေ့ရက်အလိုက်
-                    အတပ်နိုင်ဆုံး စုစည်း​ပေးထား​ပေးမည့် website တစ်ခုဖြစ်ပါသည်။
+                    ကျွန်​တော်တို့ Revolution Pattern ​ပြောင်းဖို့အချိန်တန်ပါပြီ။ယခု website သည် ဒန်​ပေါက်ချက်နည်းများနှင့်ကြာဇံ​ကြော်နည်း link 
+                    များကိုစုစည်း​ပေးထားမည့် website တစ်ခုဖြစ်ပါသည်။
                 </p>                
             </div>
         </div>
