--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <img src = "images/header.jpg" style = "width : 100% ; height : 25% ;"/>
         <div class = "header">
             <div class = "first">
-                <img src = "Images/save_myanmar.jpg" style = "width : 100%; height : 100%; margin-top: 45%;"/>
+                <img src = "images/save_myanmar.jpg" style = "width : 100%; height : 100%; margin-top: 45%;"/>
             </div>
             <div class = "second">                  
                 <p style="text-align: center; font-size: 25px; font-weight: bold;">What Is Dan Pouk Website?</p>
