--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <img src = "images/header.jpg" style = "width : 100% ; height : 25% ;"/>
         <div class = "header">
             <div class = "first">
-                <img src = "images/save_myanmar.jpg" style = "width : 100%; height : 100%; margin-top: 45%;"/>
+                <img src = "i mages/save_myanmar.jpg" style = "width : 100%; height : 100%; margin-top: 45%;"/>
             </div>
             <div class = "second">                  
                 <p style="text-align: center; font-size: 25px; font-weight: bold;">What Is Dan Pouk Website?</p>
@@ -22,5 +22,12 @@
                 </p>                
             </div>
         </div>
+        <div class="card">
+            <img src="https://www.w3schools.com/howto/img_avatar.png" alt="Avatar" style="width:100%">
+            <div class="container">
+              <h4><b>John Doe</b></h4>
+              <p>Architect & Engineer</p>
+            </div>
+          </div>
     </body>
 </html>
