--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <img src = "images/header.jpg" style = "width : 100% ; height : 25% ;"/>
         <div class = "header">
             <div class = "first">
-                <img src = "i mages/save_myanmar.jpg" style = "width : 100%; height : 100%; margin-top: 45%;"/>
+                <img src = "images/save_myanmar.jpg" style = "width : 100%; height : 100%; margin-top: 45%;"/>
             </div>
             <div class = "second">                  
                 <p style="text-align: center; font-size: 25px; font-weight: bold;">What Is Dan Pouk Website?</p>
@@ -25,8 +25,12 @@
         <div class="card">
             <img src="https://www.w3schools.com/howto/img_avatar.png" alt="Avatar" style="width:100%">
             <div class="container">
-              <h4><b>John Doe</b></h4>
-              <p>Architect & Engineer</p>
+              <h4><b>ဒန်​ပေါက်ချက်နည်းများ</b></h4>
+              <div>
+                  <a >
+                      <button>ကြည့်မယ်။</button>
+                  </a>
+              </div> 
             </div>
           </div>
     </body>
