--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="images/danpouk.jpg" alt="Avatar" style="width:100%">
+            <img src="images/danpouk.jpg" style="width:100% ; height: 80%;">
             <div class="container">
               <h4><b>ဒန်​ပေါက်ချက်နည်းများ</b></h4>
               <div>
