--- a/index.html
+++ b/index.html
@@ -22,10 +22,25 @@
                 </p>                
             </div>
         </div>
+        <div class = "div">
+            <br/>
+        </div>
         <div class="card">
             <img src="images/danpouk.jpg" style="width:100% ; height: 80%;">
             <div class="container">
               <h4><b>ဒန်​ပေါက်ချက်နည်းများ</b></h4>
+              <div>
+                  <a >
+                      <button class = "button">ကြည့်မယ်။</button>
+                  </a>
+              </div> 
+            </div>
+          </div>
+          <br/>
+          <div class="card">
+            <img src="images/kyarr_zan.jpg" style="width:100% ; height: 80%;">
+            <div class="container">
+              <h4><b>ကြာဇံ​ကြော်နည်းများ</b></h4>
               <div>
                   <a >
                       <button class = "button">ကြည့်မယ်။</button>
