--- a/index.html
+++ b/index.html
@@ -48,5 +48,11 @@
               </div> 
             </div>
           </div>
+          <br/>
+          <hr/>
+          <div class = "footer">
+            <p style="font-weight: bold; color: red;font-size: 28px;text-align: center;">#Save_Myanmar</p>
+            <p style="font-style: oblique;font-size: 25px; text-align: center;">Powered By B_T!!</p>
+        </div>
     </body>
 </html>
