--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </div>
           </div>
           <br/>
-          <div style = "border : 3px solid red; padding : 10px ; text-align: center; font-weight: bold;">
+          <div style = "border : 3px solid red; padding : 10px ; text-align: center; font-weight: bold; font-size: 20px;">
               <p>ယခု website သည် မတရားစစ်အာဏာသိမ်းမှု့ကို အပြင်းအထန် ကန့်ကွက်​သော ​တောက်ပ​သောအနာဂတ်များရှိ​သေး​သည့် နည်းပညာကို ချစ်မြတ်နိုး​သော
                    လူငယ်တစ်စုမှပြုလုပ်ဖန်တီးထားပါသည်။</p>
           </div>
