--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="container">
               <h4><b>ဒန်​ပေါက်ချက်နည်းများ</b></h4>
               <div>
-                  <a >
+                  <a href = "danpouk.html">
                       <button class = "button">ကြည့်မယ်။</button>
                   </a>
               </div> 
