--- a/danpouk.html
+++ b/danpouk.html
@@ -10,5 +10,15 @@
       <h style = "font-size: 70px; font-weight: bold;">Dan Pouk</h>
   </div class = "header">
   <img src = "images/danpouk.jpg" style = "width : 100% ; height : 25% ;"/>
+  <p style = "text-align: center;font-weight: bold;font-size: 25px;">ဒန်​ပေါက်ချက်နည်းများလေ့လာရန်</p>
+  <div class="c">
+    <samp><img src = "images/Facebook.png" style = "height: 10%; width : 10%;"/></samp>
+    <samp style = "font-size: 40px;">Molotov လုပ်နည်း</samp>
+    <div style = "margin-left: 75%;">
+      <a>
+        <button class = "button">ကြည့်မယ်။</button>
+      </a>
+    </div>
+  </div>
   </body>
 </html>
