--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="card">
             <img src="images/danpouk.jpg" style="width:100% ; height: 80%;">
             <div class="container">
-              <h4><b>ဒန်​ပေါက်ချက်နည်းများ</b></h4>
+              <h4 style="font-size: 28px;"><b>ဒန်​ပေါက်ချက်နည်းများ</b></h4>
               <div>
                   <a href = "danpouk.html">
                       <button class = "button">ကြည့်မယ်။</button>
@@ -40,7 +40,7 @@
           <div class="card">
             <img src="images/kyarr_zan.jpg" style="width:100% ; height: 80%;">
             <div class="container">
-              <h4><b>ကြာဇံ​ကြော်နည်းများ</b></h4>
+              <h4 style="font-size: 28px;"><b>ကြာဇံ​ကြော်နည်းများ</b></h4>
               <div>
                   <a >
                       <button class = "button">ကြည့်မယ်။</button>
