--- a/danpouk.html
+++ b/danpouk.html
@@ -11,12 +11,26 @@
   </div class = "header">
   <img src = "images/danpouk.jpg" style = "width : 100% ; height : 25% ;"/>
   <p style = "text-align: center;font-weight: bold;font-size: 30px; border : 5px solid red;padding: 5px;">ဒန်​ပေါက်ချက်နည်းများလေ့လာရန်</p>
+
   <div class="c">
     <samp><img src = "images/Facebook.png" style = "height: 10%; width : 10%;"/></samp>
     <samp style = "font-size: 40px;">Molotov လုပ်နည်း</samp>
     <hr/>
     <div style = "margin-left: 80%;">
       <a href = "https://www.facebook.com/qninr.qninr/videos/453289289428664/">
+        <button class = "button">ကြည့်မယ်။</button>
+      </a>
+    </div>
+  </div>
+
+  <br/>
+
+  <div class="c">
+    <samp><img src = "images/Facebook.png" style = "height: 10%; width : 10%;"/></samp>
+    <samp style = "font-size: 40px;">Smoke Bomb လုပ်နည်း</samp>
+    <hr/>
+    <div style = "margin-left: 80%;">
+      <a href = "https://www.facebook.com/watch/?v=303940864669818">
         <button class = "button">ကြည့်မယ်။</button>
       </a>
     </div>
