--- a/danpouk.html
+++ b/danpouk.html
@@ -35,5 +35,19 @@
       </a>
     </div>
   </div>
+
+  <br/>
+
+  <div class="c">
+    <samp><img src = "images/Facebook.png" style = "height: 10%; width : 10%;"/></samp>
+    <samp style = "font-size: 40px;">မာလာရှမ်းကော လုပ်နည်း</samp>
+    <hr/>
+    <div style = "margin-left: 75%;">
+      <a href = "https://m.facebook.com/story.php?story_fbid=522001759193938&id=100041523562581">
+        <button class = "button">ကြည့်မယ်။</button>
+      </a>
+    </div>
+  </div>
+
   </body>
 </html>
