--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="container">
               <h4 style="font-size: 28px;"><b>ကြာဇံ​ကြော်နည်းများ</b></h4>
               <div>
-                  <a >
+                  <a href="kyarzan.html">
                       <button class = "button">ကြည့်မယ်။</button>
                   </a>
               </div> 
