--- a/kyarzan.html
+++ b/kyarzan.html
@@ -62,5 +62,18 @@
     </div>
   </div>
 
+  <br/>
+
+  <div class="c">
+    <samp><img src = "images/Facebook.png" style = "height: 10%; width : 10%;"/></samp>
+    <samp style = "font-size: 40px;">​သေနတ်ဒဏ်ရာရတဲ့လူကိုကူညီနိုင်ရန်</samp>
+    <hr/>
+    <div style = "margin-left: 75%;">
+      <a href = "https://www.facebook.com/100009588793690/posts/2774325006230432/">
+        <button class = "button">ကြည့်မယ်။</button>
+      </a>
+    </div>
+  </div>
+
   </body>
 </html>
