--- a/kyarzan.html
+++ b/kyarzan.html
@@ -75,5 +75,17 @@
     </div>
   </div>
 
+  <br/>
+
+  <div class="c">
+    <samp><img src = "images/Facebook.png" style = "height: 10%; width : 10%;"/></samp>
+    <samp style = "font-size: 40px;">ပြန်ချမယ်ဆိုရင်</samp>
+    <hr/>
+    <div style = "margin-left: 75%;">
+      <a href = "https://m.facebook.com/story.php?story_fbid=797855791081381&id=100025709016271">
+        <button class = "button">ကြည့်မယ်။</button>
+      </a>
+    </div>
+  </div>
   </body>
 </html>
