--- a/kyarzan.html
+++ b/kyarzan.html
@@ -87,5 +87,20 @@
       </a>
     </div>
   </div>
+
+  <br/>
+
+  <div class="c">
+    <samp><img src = "images/Facebook.png" style = "height: 10%; width : 10%;"/></samp>
+    <samp style = "font-size: 40px;">ရွေ့လျားခံတပ်</samp>
+    <hr/>
+    <div style = "margin-left: 75%;">
+      <a href = "https://m.facebook.com/story.php?story_fbid=264012718510563&id=108915224020314">
+        <button class = "button">ကြည့်မယ်။</button>
+      </a>
+    </div>
+  </div>
+
+
   </body>
 </html>
