--- a/danpouk.html
+++ b/danpouk.html
@@ -49,5 +49,31 @@
     </div>
   </div>
 
+  <br/>
+
+  <div class="c">
+    <samp><img src = "images/Facebook.png" style = "height: 10%; width : 10%;"/></samp>
+    <samp style = "font-size: 40px;">ဂျင်ကလိပြုလုပ်ပုံ</samp>
+    <hr/>
+    <div style = "margin-left: 75%;">
+      <a href = "https://www.facebook.com/286999582237637/videos/2622669758006093/">
+        <button class = "button">ကြည့်မယ်။</button>
+      </a>
+    </div>
+  </div>
+
+  <br/>
+
+  <div class="c">
+    <samp><img src = "images/Youtube.png" style = "height: 10%; width : 10%;"/></samp>
+    <samp style = "font-size: 40px;">How To Make A Laser Assisted Blowgun</samp>
+    <hr/>
+    <div style = "margin-left: 75%;">
+      <a href = "https://m.youtube.com/watch?v=YgT8I2uxJ6o&feature=youtu.be">
+        <button class = "button">ကြည့်မယ်။</button>
+      </a>
+    </div>
+  </div>
+
   </body>
 </html>
