--- a/danpouk.html
+++ b/danpouk.html
@@ -75,5 +75,58 @@
     </div>
   </div>
 
+  <br/>
+
+  <div class="c">
+    <samp><img src = "images/Youtube.png" style = "height: 10%; width : 10%;"/></samp>
+    <samp style = "font-size: 40px;">How To Make Black Powder</samp>
+    <hr/>
+    <div style = "margin-left: 75%;">
+      <a href = "https://youtu.be/xgA6_uNb5dU">
+        <button class = "button">ကြည့်မယ်။</button>
+      </a>
+    </div>
+  </div>
+
+  <br/>
+
+  <div class="c">
+    <samp><img src = "images/Youtube.png" style = "height: 10%; width : 10%;"/></samp>
+    <samp style = "font-size: 40px;">How To Make Sound Bomb</samp>
+    <hr/>
+    <div style = "margin-left: 75%;">
+      <a href = "https://youtu.be/IsOyR9qUlWg">
+        <button class = "button">ကြည့်မယ်။</button>
+      </a>
+    </div>
+  </div>
+
+  <br/>
+
+  <div class="c">
+    <samp><img src = "images/Youtube.png" style = "height: 10%; width : 10%;"/></samp>
+    <samp style = "font-size: 40px;">Mixing Gasoline and Styrofoam</samp>
+    <hr/>
+    <div style = "margin-left: 75%;">
+      <a href = "https://m.youtube.com/watch?v=8vLESJmkLg0&feature=youtu.be">
+        <button class = "button">ကြည့်မယ်။</button>
+      </a>
+    </div>
+  </div>
+
+  <br/>
+
+  <div class="c">
+    <samp><img src = "images/Facebook.png" style = "height: 10%; width : 10%;"/></samp>
+    <samp style = "font-size: 40px;">မျက်ရည်ယိုဗုံး ကာကွယ်ရန် Mask ပြုလုပ်နည်း</samp>
+    <hr/>
+    <div style = "margin-left: 75%;">
+      <a href = "https://m.facebook.com/story.php?story_fbid=4158426674192206&id=216265185075061">
+        <button class = "button">ကြည့်မယ်။</button>
+      </a>
+    </div>
+  </div>
+
+
   </body>
 </html>
