--- a/danpouk.html
+++ b/danpouk.html
@@ -79,7 +79,7 @@
 
   <div class="c">
     <samp><img src = "images/Youtube.png" style = "height: 10%; width : 10%;"/></samp>
-    <samp style = "font-size: 40px;">How To Make Black Powder</samp>
+    <samp style = "font-size: 40px;">Black Powder ပြုလုပ်နည်း</samp>
     <hr/>
     <div style = "margin-left: 75%;">
       <a href = "https://youtu.be/xgA6_uNb5dU">
@@ -92,7 +92,7 @@
 
   <div class="c">
     <samp><img src = "images/Youtube.png" style = "height: 10%; width : 10%;"/></samp>
-    <samp style = "font-size: 40px;">How To Make Sound Bomb</samp>
+    <samp style = "font-size: 40px;">အသံ bomb ပြုလုပ်နည်း</samp>
     <hr/>
     <div style = "margin-left: 75%;">
       <a href = "https://youtu.be/IsOyR9qUlWg">
@@ -135,6 +135,19 @@
     <hr/>
     <div style = "margin-left: 75%;">
       <a href = "https://m.youtube.com/watch?v=NFLATyvB6D0&feature=youtu.be">
+        <button class = "button">ကြည့်မယ်။</button>
+      </a>
+    </div>
+  </div>
+
+  <br/>
+
+  <div class="c">
+    <samp><img src = "images/Youtube.png" style = "height: 10%; width : 10%;"/></samp>
+    <samp style = "font-size: 40px;">Air gas gun ပြုလုပ်နည်း</samp>
+    <hr/>
+    <div style = "margin-left: 75%;">
+      <a href = "https://m.youtube.com/watch?v=vkgrDTCcOY4">
         <button class = "button">ကြည့်မယ်။</button>
       </a>
     </div>
